[gd_scene load_steps=8 format=1]

[ext_resource path="res://ship/Ship.gd" type="Script" id=1]
[ext_resource path="res://ship/yepart.tex" type="Texture" id=2]
[ext_resource path="res://ship/ship4.tex" type="Texture" id=3]
[ext_resource path="res://ship/explosion-8.tex" type="Texture" id=4]
[ext_resource path="res://ship/Shield.tscn" type="PackedScene" id=5]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( 14, 13, -14, 13, 0, -15 )

[sub_resource type="Animation" id=2]

resource/name = "Explode"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ship_image:visibility/self_opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.2 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 1.0, 0.0 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("ship_image:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0.2 ), "transitions":FloatArray( 1 ), "update":1, "values":[ false ] }
tracks/2/type = "value"
tracks/2/path = NodePath("explosion8:frame")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0, 31 ] }
tracks/3/type = "value"
tracks/3/path = NodePath("explosion8:visibility/visible")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0, 1.1 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ true, false ] }
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 2 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"_die" } ] }
tracks/5/type = "value"
tracks/5/path = NodePath("/root/gSoundPlayer:play/play")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ "mexplosion" ] }

[node name="Ship" type="Area2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 0
collision/mask = 4
script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"2D" }
max_speed = 240
shield_enabled = true

[node name="left_thrust" type="Particles2D" parent="."]

visibility/opacity = 0.6
visibility/blend_mode = 1
transform/pos = Vector2( -4, 15 )
config/amount = 10
config/lifetime = 0.1
config/preprocess = 0.1
config/emitting = false
config/half_extents = Vector2( 1, 0 )
config/local_space = false
config/texture = ExtResource( 2 )
params/direction = 0.0
params/spread = 0.0
params/linear_velocity = 100.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 0.6
params/final_size = 0.2
params/hue_variation = 0.0
params/anim_speed_scale = 0.0
params/anim_initial_pos = 0.0
randomness/linear_velocity = 0.25

[node name="right_thrust" type="Particles2D" parent="."]

visibility/opacity = 0.6
visibility/blend_mode = 1
transform/pos = Vector2( 4, 15 )
config/amount = 10
config/lifetime = 0.1
config/preprocess = 0.1
config/emitting = false
config/half_extents = Vector2( 1, 0 )
config/local_space = false
config/texture = ExtResource( 2 )
params/direction = 0.0
params/spread = 0.0
params/linear_velocity = 100.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 0.6
params/final_size = 0.2
params/hue_variation = 0.0
params/anim_speed_scale = 0.0
params/anim_initial_pos = 0.0
randomness/linear_velocity = 0.25

[node name="ship_image" type="Sprite" parent="."]

texture = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

visibility/visible = false
build_mode = 0
polygon = Vector2Array( 0, -15, -14, 13, 14, 13 )
shape_range = Vector2( 0, 0 )
trigger = true

[node name="explosion8" type="Sprite" parent="."]

visibility/visible = false
texture = ExtResource( 4 )
vframes = 4
hframes = 8
frame = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Explode = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Shield" parent="." instance=ExtResource( 5 )]

[connection signal="body_enter" from="." to="." method="_on_Ship_body_enter"]


